[package]
name = "kline"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
base64 = "0.22.1"
rustyline = "16.0.0"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
thiserror = "1.0"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }